--- a/juanfrans/_posts/2019-12-06-Taxis.md
+++ b/juanfrans/_posts/2019-12-06-Taxis.md
@@ -1,8 +1,10 @@
 ---
 layout: post
-title:  "Welcome to Jekyll!"
+title:  Access to Taxicabs for Unbanked Households
 date:   2019-12-06 15:39:18 -0500
 categories: jekyll update
+thumbImagePath: assets/thumbs/accessTaxicabs.png
+shortDescription: A statistical analysis and mapping project of taxicab payment methods and its correlation with banking service accessibility.
 ---
 You’ll find this post in your `_posts` directory. Go ahead and edit it and re-build the site to see your changes. You can rebuild the site in many different ways, but the most common way is to run `jekyll serve`, which launches a web server and auto-regenerates your site when a file is updated.
 
