changed width and updated post format

--- a/juanfrans/_posts/2019-12-06-GSAPP-AP.md
+++ b/juanfrans/_posts/2019-12-06-GSAPP-AP.md
@@ -2,9 +2,10 @@
 layout: post
 title:  GSAPP Alumni Project
 date:   2019-12-06 15:39:18 -0500
-categories: jekyll update
 thumbImagePath: assets/thumbs/gsappAP.png
-shortDescription: Based on a survey of GSAPP's alumni, this interactive visualization provides insights into the school's professions and helps record the different paths its graduates have taken.
+shortDescription: This interactive visualization provides insights into the GSAPP's professions and helps record the different paths its graduates have taken.
+builtWith: [p5.js]
+inCollaboration: [Steven Sanchez]
 ---
 You’ll find this post in your `_posts` directory. Go ahead and edit it and re-build the site to see your changes. You can rebuild the site in many different ways, but the most common way is to run `jekyll serve`, which launches a web server and auto-regenerates your site when a file is updated.
 
