--- a/_posts/2020-01-01-Uprooted.md
+++ b/_posts/2020-01-01-Uprooted.md
@@ -1,17 +1,17 @@
 ---
 layout: post
-title:  Uprooted
+title:  "Uprooted: How Newark Acquired a Medical School and Destroyed a Neighborhood"
 date:   2020-01-01
 thumbImagePath: assets/thumbs/uprootedSplash.png
-shortDescription: We’ve transformed the terms of service and data policies of Amazon, Apple, Facebook and Google into a database powering an interactive visualization.
+shortDescription: The story of how a neighborhood in Newark, New Jersey, was transformed by "white flight" and urban renewal, and the people who fought against it and suffered its consequences.
 interactiveSite:
   - 
     name: "Uprooted: How Newark Acquired a Medical School and Destroyed a Neighborhood"
     url: https://newestamericans.com/universityHeights/
-mainImagePath: assets/projectImages/mappingDataFlows/mappingDataFlows_main.png
+mainImagePath: assets/projectImages/uprooted/uprootedSplash.png
 ---
-*Mapping Data Flows is a collaboration between John Battelle (Co-Founder and CEO of [Recount Media](https://therecount.com/)), the [Brown Institute for Media Innovation](https://brown.columbia.edu/) and the [Technology and Policy Initiative](https://sipa.columbia.edu/ideas-lab/techpolicy) at SIPA, Columbia University. Its team includes John Battelle, Juan Francisco Saldarriaga, Zoe Martin, Matthew Albasi, Natasha Bhuta, and Veronica Penney.*
+*Uprooted is a collaboration with [Newest Americans](https://newestamericans.com/).*
 
-Understanding how the largest technology companies collect, use, and share user information across the internet. We’ve transformed the “Big Four” terms of service and data policies -- the thousands of lines of code that govern their use of your data -- into a database powering an interactive visualization, an initial version of which we invite you to explore and critique.
+Between 1955 and 1972 hundreds of people were displaced from Newark, New Jersey. Uprooted tells the story of this displacement, and maps the origins and destinations of many of the people that were forced to leave their homes. It is a the same time a rich historical archive of images, videos, and audio interviews, as well as a detailed mapping platform visualizing the extent and magnitude of this tragedy.
 
-*Mapping Data Flows was built with [p5.js](https://p5js.org/).*
+*Uprooted was built with [Mapbox](https://www.mapbox.com/) and [Juxtapose](https://juxtapose.knightlab.com/).*
