updated uprooted images

--- a/_posts/2020-01-01-Uprooted.md
+++ b/_posts/2020-01-01-Uprooted.md
@@ -6,12 +6,20 @@ thumbImagePath: assets/thumbs/uprootedSplash.png
 shortDescription: The story of how a neighborhood in Newark, New Jersey, was transformed by "white flight" and urban renewal, and the people who fought against it and suffered its consequences.
 interactiveSite:
   - 
-    name: "Uprooted: How Newark Acquired a Medical School and Destroyed a Neighborhood"
+    name: "Uprooted story"
     url: https://newestamericans.com/universityHeights/
 mainImagePath: assets/projectImages/uprooted/uprootedSplash.png
 ---
 *Uprooted is a collaboration with [Newest Americans](https://newestamericans.com/).*
 
 Between 1955 and 1972 hundreds of people were displaced from Newark, New Jersey. Uprooted tells the story of this displacement, and maps the origins and destinations of many of the people that were forced to leave their homes. It is a the same time a rich historical archive of images, videos, and audio interviews, as well as a detailed mapping platform visualizing the extent and magnitude of this tragedy.
+
+Here are some frames from the piece:
+
+![Uprooted](../../../assets/projectImages/uprooted/uprooted_01.png)
+![Uprooted](../../../assets/projectImages/uprooted/uprooted_02.png)
+![Uprooted](../../../assets/projectImages/uprooted/uprooted_03.png)
+![Uprooted](../../../assets/projectImages/uprooted/uprooted_04.png)
+![Uprooted](../../../assets/projectImages/uprooted/uprooted_05.png)
 
 *Uprooted was built with [Mapbox](https://www.mapbox.com/) and [Juxtapose](https://juxtapose.knightlab.com/).*
